Bug #1266, Time-out box mis-alignment - MSIE,
* Fixes to OUICE Light and OUICE Dark themes.

--- a/application/assets/ouplayer/ouice-dark/ouice-dark.css
+++ b/application/assets/ouplayer/ouice-dark/ouice-dark.css
@@ -163,6 +163,7 @@
 .oup.-o .time-out{ X-top:-4px; bottom:38px;}
 .oup.-webkit .time-out, .oup.-webkit .time-total{padding-bottom:2px; height:13px;}
 .oup.-ie7 .time-out, .oup.-ie7 .time-total, .oup.-ie8 .time-out, .oup.-ie8 .time-total{height:13px; padding-bottom:2px;}
-.oup.-ie8 .time-out{position:relative; top:-4px; left:-3px;}
+.oup.-ie8 .time-out, .oup.-ie7.-docmode8 .time-out, .oup.-ie7.-docmode9 .time-out{position:relative; top:-4px; left:-1px;}
 .oup.-ie7 .time-out{position:relative; top:1px; left:2px;}
 .oup.-ie7  .volume.group .louder{left:0;}
+.oup.-ie7.-docmode8 .volume.group .louder{left:-6px;}
