--- a/application/assets/ouplayer/ouice-light/ouice-light.css
+++ b/application/assets/ouplayer/ouice-light/ouice-light.css
@@ -202,9 +202,10 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
 .oup.-webkit .time-out, .oup.-webkit .time-total{padding-bottom:2px; height:13px;}
 .oup.-webkit .seek-bar, .oup.-ie7 .seek-bar{bottom:36px;}
 .oup.-ie7 .time-out, .oup.-ie7 .time-total, .oup.-ie8 .time-out, .oup.-ie8 .time-total{height:10px; padding-bottom:2px; font-size:.9em;}
-.oup.-ie8 .time-out{position:relative; top:-4px; left:-3px;}
+.oup.-ie8 .time-out, .oup.-ie7.-docmode8 .time-out, .oup.-ie7.-docmode9 .time-out{position:relative; top:-4px; left:-3px;}
 .oup.-ie7 .time-out{position:relative; top:1px; left:2px;}
 .oup.-ie7  .volume.group .louder{left:39px;}
+
 
 /*MSIE hack - border is required! */
 .oup.-ie7.mode-embed.mtype-audio .oup-title a.rel-2{
@@ -214,6 +215,8 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
   border:1px solid transparent;
 }
 
+/*
 .X-oup.-ie7 .oupc{border:2px solid red;}
 .X-oup.-ie8 .oupc{border:2px solid green;}
 .X-oup.-ie9 .oupc{border:2px solid blue;}
+*/
